Some changes, implemented material design

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,11 +2,12 @@ footer {
     width: 100%;
     position: fixed;
     bottom: 0;
-    background-color: aquamarine;
+    background-color: rgb(2, 122, 66);
 
     div {
         margin-right: 0;
         margin-left: auto;
         width: 250px;
+        color: rgb(255, 255, 255);
     }
 }
