Fixed according to the comments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-translation></app-translation>
+<app-language-switcher></app-language-switcher>
 
 <ul>
   <li *ngFor="let item of items$ | async">
