--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,11 +1,11 @@
 footer {
-    width: 100%;
+    width: 99%;
     position: fixed;
     bottom: 0;
-    background-color: rgb(2, 122, 66);
+    background-color: rgb(49, 209, 134);
 
     div {
-        margin-right: 0;
+        margin-right: 10px;
         margin-left: auto;
         width: 250px;
         color: rgb(255, 255, 255);
