--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,9 @@
   </li>
 </ul>
 
-<filter-duration></filter-duration>
+<app-filter-duration></app-filter-duration>
+<app-qpac-filter-type></app-qpac-filter-type>
+<app-qpac-filter-gender></app-qpac-filter-gender>
 
 <app-footer></app-footer>
 
