--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,11 @@
+<div *ngFor="let attr of response">
+  <ul>
+    <li>{{ attr.currently.temperature | json }}</li>
+    <!-- <li>{{ response | json }}</li> -->
+  </ul>
+</div>
+
+
 <footer>
   <div>
     <p>{{ 'footer.info.text' | translate }}</p>
