--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let attr of response">
   <ul>
     <li>{{ attr.currently.temperature | json }}</li>
-    <!-- <li>{{ response | json }}</li> -->
+    <li>{{ response | json }}</li>
   </ul>
 </div>
 
