Showing the weather

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,9 @@
 <div *ngFor="let attr of response">
   <ul>
-    <li>{{ attr.currently.temperature | json }}</li>
-    <li>{{ response | json }}</li>
+    <li> {{ 'generatedList.weatherAPI.location.text' | translate}} {{ attr.timezone | json }}</li>
+    <li> {{ 'generatedList.weatherAPI.temperature.text' | translate}} {{ attr.currently.temperature | json }} &#8451;</li>
+    <li> {{ 'generatedList.weatherAPI.cloudiness.text' | translate}} {{ attr.currently.summary | json }}</li>
+    <li> {{ 'generatedList.weatherAPI.precipType.text' | translate}} {{ attr.currently.precipType | json }}</li>
   </ul>
 </div>
 
