Pre-commit filter-destination

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
   </li>
 </ul>
 
+<app-qpac-filter-destination></app-qpac-filter-destination>
 <app-filter-duration></app-filter-duration>
 <app-qpac-filter-type></app-qpac-filter-type>
 <app-qpac-filter-gender></app-qpac-filter-gender>
