--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,16 @@
-<p>
-  auth works!
-</p>
+<mat-card>
+  <div class="container">
+    <mat-card-title>Welcome to QuickPack App!</mat-card-title>
+    <mat-card-subtitle>Please sign in and start packing for your trip :)</mat-card-subtitle>
+    <mat-card-actions>
+      <button mat-raised-button color="primary" class="social-login-btn" (click)="doFbLogin()">
+        <i class="zmdi zmdi-facebook-box"></i>
+        <span>Sign in with FACEBOOK</span>
+      </button>
+      <button mat-raised-button color="warn" class="social-login-btn" (click)="doGoogleLogin()">
+        <i class="zmdi zmdi-google-plus-box"></i>Sign in with GOOGLE</button>
+      <button mat-raised-button class="social-login-btn" (click)="doAnonymousLogin()">
+        <i class="material-icons">face</i>Sign in as a Guest</button>
+    </mat-card-actions>
+  </div>
+</mat-card>
