--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,8 @@
 
 <app-filter-duration></app-filter-duration>
 
+<app-weather-api></app-weather-api>
+
 <app-footer></app-footer>
 
 <router-outlet></router-outlet>
