--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,6 +5,7 @@ mat-toolbar{
 
 .toolbar-header{
     flex-grow: 1;
+    margin-left: 5px;
 }
 
 .user-pic{
@@ -14,5 +15,14 @@ mat-toolbar{
 }
 
 .logout-link{
-    margin-left:10px;
+    margin: 10px 0 10px 0;
+}
+
+.additional-info mat-option{
+    width: 10px;
+}
+
+.head-panel{
+    // color: #1d3d1e;
+    // background-color:#B3F2C6;
 }
