--- a/src/app/language-switcher/language-switcher.component.scss
+++ b/src/app/language-switcher/language-switcher.component.scss
@@ -1,32 +1,10 @@
-header {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    background-color: rgb(49, 209, 134);
-    align-items: center;
+mat-form-field {
+    width: 60px;
+    display: block;
+    margin-left: 15px;
+}
 
-    #logo {
-        padding-left: 15px;
-    }
-
-    nav {
-        margin-right: 0;
-        margin-left: auto;
-
-        li {
-            display: inline-block;
-            list-style-type: none;
-            margin: 0 20px;
-            vertical-align: middle;
-
-            mat-form-field {
-                width: 60px;
-            }
-
-            a {
-                font-size: 1.25rem;
-                text-decoration: none;
-            }
-        }
-    }
+a {
+    font-size: 1.25rem;
+    text-decoration: none;
 }
