--- a/src/app/weather-dashboard/weather-dashboard.component.html
+++ b/src/app/weather-dashboard/weather-dashboard.component.html
@@ -1,2 +1,4 @@
-<qpac-filter-duration></qpac-filter-duration>
-<qpac-weather-display></qpac-weather-display>
+<qpac-filter-duration (onChanged)="onChanged($event)"></qpac-filter-duration>
+<qpac-weather-display>
+    {{ response }}
+</qpac-weather-display>
