--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
 <qpac-header></qpac-header>
-<qpac-filter-duration></qpac-filter-duration>
 <qpac-filter-type></qpac-filter-type>
 <qpac-filter-gender></qpac-filter-gender>
+<qpac-weather-dashboard></qpac-weather-dashboard>
