Have response json

--- a/src/app/weather-dashboard/weather-dashboard.component.html
+++ b/src/app/weather-dashboard/weather-dashboard.component.html
@@ -1,4 +1,2 @@
-<qpac-filter-duration (onChanged)="onChanged($event)"></qpac-filter-duration>
-<qpac-weather-display>
-    {{ response }}
-</qpac-weather-display>
+<qpac-filter-duration (changedDepartureDate)="changedDepartureDate($event)"></qpac-filter-duration>
+<qpac-weather-display [response]="response"></qpac-weather-display>
