--- a/src/app/weather-display/weather-display.component.html
+++ b/src/app/weather-display/weather-display.component.html
@@ -1,3 +1,3 @@
-<p>
-  weather-display works!
-</p>
+<div *ngFor="let attr of response">
+   Current temperature: {{ attr.currently.temperature | json }}
+</div>
