--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="head-panel" color="primary" *ngIf="currentUser">
   <div>
-  <img class="header-logo" src="../../assets/img/qp_logo.png" alt="logo" width="40px" hight="40px">
+  <img class="header-logo" src="../../assets/img/qp_logo.png" alt="logo" width="40px" height="40px">
 </div>
 <span class="toolbar-header">Quick Pack</span>
   <span class="example-fill-remaining-space"></span>
