--- a/src/app/filters/filter-duration/filter-duration.component.html
+++ b/src/app/filters/filter-duration/filter-duration.component.html
@@ -6,7 +6,7 @@
     matInput 
     [matDatepicker]="datefrom" 
     (focus)="datefrom.open()"
-    (dateChange)="change(from)"
+    (dateChange)="change(from, lang)"
     placeholder="{{ 'filters.duration.placeholder.text' | translate }}">
   <mat-datepicker-toggle matSuffix [for]="datefrom"></mat-datepicker-toggle>
   <mat-datepicker touchUi #datefrom></mat-datepicker>
