--- a/src/app/weather-display/weather-display.component.html
+++ b/src/app/weather-display/weather-display.component.html
@@ -1,4 +1,7 @@
 <div *ngFor="let attr of response">
-  {{ 'weather.display.temperature.text' | translate }} {{ attr.currently.temperature | json }}
-   {{ 'weather.display.precip.text' | translate}} {{ attr.currently.precipType | json }}
+  <ul>
+    <li> {{ 'weather.display.temperature.text' | translate }} {{ attr.currently.temperature | json }} &#8451; </li>
+    <li> {{ 'weather.display.summary.text' | translate}} {{ attr.currently.summary | json }} </li>
+    <li> {{ 'weather.display.location.text' | translate}} {{ attr.timezone | json }} </li>
+  </ul>
 </div>
