--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,3 +2,7 @@
 <qpac-filter-type></qpac-filter-type>
 <qpac-filter-gender></qpac-filter-gender>
 <qpac-weather-dashboard></qpac-weather-dashboard>
+
+<pre>
+  {{ item$ | async | json }}
+</pre>
