activities-filter component added

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -12,6 +12,7 @@ mat-toolbar{
     border-radius: 50px;
     margin-left: 10px;
     margin-right: 10px;
+    cursor: pointer;
 }
 
 .logout-link{
@@ -22,7 +23,3 @@ mat-toolbar{
     width: 10px;
 }
 
-.head-panel{
-    // color: #1d3d1e;
-    // background-color:#B3F2C6;
-}
