--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,3 +2,4 @@
 <qpac-filter-duration></qpac-filter-duration>
 <qpac-filter-type></qpac-filter-type>
 <qpac-filter-gender></qpac-filter-gender>
+<qpac-activities-filter (activitiesChanged)="handleFilter($event)"></qpac-activities-filter>
