--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,8 @@
 .mat-form-field-appearance-legacy .mat-form-field-infix {
     text-align: center;
 }
+
+.mat-checkbox-checked.mat-accent .mat-checkbox-background, 
+.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+    background-color: #1c401b;
+}
