--- a/src/app/pack-item/pack-item.component.html
+++ b/src/app/pack-item/pack-item.component.html
@@ -2,8 +2,7 @@
   <mat-checkbox [(ngModel)]="isChecked"></mat-checkbox>
   <div>
     <span>{{item.name}}</span>
-    <span>{{item.weight}}kg</span>
-    {{isChecked}}
+    <span>{{item.weight === 0 ? '' : item.weight + 'kg'}}</span>
   </div>
   <i
       (click)="removeItem(item)"
