Added requests to firestore

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
 <div>
   <button
     mat-raised-button color="primary"
-    (click)="generate(this.typeOfTrip, this.typeOfGender, this.response)">Generate List</button>
+    (click)="generate(this.weatherParams, this.typeOfTrip, this.activitiesParams)">Generate List</button>
 </div>
 
 <qpac-generated-list></qpac-generated-list>
