moved header and translation to core, added local storage

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -15,9 +15,9 @@
         <mat-icon>email_outline</mat-icon>
         <span class="user-email">{{currentUser.email}}</span>
       </button>
-      <button mat-menu-item>
+      <button mat-menu-item (click)="doLogout()">
         <mat-icon>exit_to_app</mat-icon>
-        <a class="logout-link" (click)="doLogout()">Logout</a>
+        <a class="logout-link">Logout</a>
       </button>
     </mat-menu>
   </div>
