Not final variant

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
 </div>
 
 <pre>
-  {{ item$ | async | json }}
+  {{ items$ | async | json }}
 </pre>
 
 <qpac-generated-list></qpac-generated-list>
