filter activity renamed and moved

--- a/src/app/dashboard/filters/filter-activities/filter-activities.component.html
+++ b/src/app/dashboard/filters/filter-activities/filter-activities.component.html
@@ -1,4 +1,4 @@
-<h3>Choose activities</h3>
+<!-- <h3>Choose activities</h3> -->
 
 <div class="checkbox-wrapper">
     <mat-checkbox [(ngModel)]="activities.baby" (change)="activityChange($event)">Baby</mat-checkbox>
