filters outputs edited

--- a/src/app/dashboard/filters/filter-gender/filter-gender.component.html
+++ b/src/app/dashboard/filters/filter-gender/filter-gender.component.html
@@ -1,4 +1,4 @@
-<h3>{{ 'filters.gender.header.text' | translate }}</h3>
+<!-- <h3>{{ 'filters.gender.header.text' | translate }}</h3> -->
 
 <button class="gender" mat-button [class.selected]="selectedGender==Gender.Male" (click)="selectGender(Gender.Male)">
     <i class="material-icons">person</i>
