--- a/src/app/dashboard/filters/filter-type/filter-type.component.html
+++ b/src/app/dashboard/filters/filter-type/filter-type.component.html
@@ -1,4 +1,4 @@
-<h3>{{ 'filters.type.header.text' | translate }}</h3>
+<!-- <h3>{{ 'filters.type.header.text' | translate }}</h3> -->
 
   <button class="trevel-type" mat-button [class.selected]="selectedType==Type.Business" (click)="selectType(Type.Business)">
       <i class="material-icons">work</i>
