--- a/src/app/dashboard/filters/filter-duration/filter-duration.component.html
+++ b/src/app/dashboard/filters/filter-duration/filter-duration.component.html
@@ -1,4 +1,4 @@
-<h3> {{ 'filters.duration.header.text' | translate}}</h3>
+<!-- <h3> {{ 'filters.duration.header.text' | translate}}</h3> -->
 <mat-form-field>
   <input 
     [min]="minDate()" 
