--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,45 @@
 <qpac-header></qpac-header>
-<qpac-filter-type></qpac-filter-type>
-<qpac-filter-gender></qpac-filter-gender>
-<qpac-activities-filter (activitiesChanged)="handleFilter($event)"></qpac-activities-filter>
-<qpac-weather-dashboard></qpac-weather-dashboard>
 
-<pre>
+<mat-vertical-stepper [linear]="true" #stepper>
+  <mat-step>
+    <ng-template matStepLabel><h3>{{ 'filters.duration.header.text' | translate}}</h3></ng-template>
+    <qpac-filter-duration (changedDepartureDate)="handleFilter($event)"></qpac-filter-duration>
+    <div>
+      <button mat-button matStepperPrevious>{{'dashboard.controls.back' | translate}}</button>
+      <button mat-button matStepperNext>{{'dashboard.controls.next' | translate}}</button>
+    </div>
+  </mat-step>
+
+  <mat-step>
+    <ng-template matStepLabel><h3>{{ 'filters.type.header.text' | translate }}</h3></ng-template>
+    <qpac-filter-type (changedType)="handleFilter($event)"></qpac-filter-type>
+    <div>
+      <button mat-button matStepperPrevious>{{'dashboard.controls.back' | translate}}</button>
+      <button mat-button matStepperNext>{{'dashboard.controls.next' | translate}}</button>
+    </div>
+  </mat-step>
+
+  <mat-step>
+      <ng-template matStepLabel><h3>{{ 'filters.gender.header.text' | translate}}</h3></ng-template>
+      <qpac-filter-gender (changedGender)="handleFilter($event)"></qpac-filter-gender>
+      <div>
+        <button mat-button matStepperPrevious>{{'dashboard.controls.back' | translate}}</button>
+        <button mat-button matStepperNext>{{'dashboard.controls.next' | translate}}</button>
+      </div>
+    </mat-step>
+
+  <mat-step>
+    <ng-template matStepLabel><h3>{{ 'filters.activities.header.text'| translate }}</h3></ng-template>
+    <qpac-filter-activities (activitiesChanged)="handleFilter($event)"></qpac-filter-activities>
+    <div>
+      <button mat-button matStepperPrevious>{{'dashboard.controls.back' | translate}}</button>
+      <button mat-button (click)="stepper.reset()">{{'dashboard.controls.reset' | translate }}</button>
+      <button mat-button>{{'dashboard.controls.generate' | translate }}</button>
+    </div>
+  </mat-step>
+
+</mat-vertical-stepper>
+
+<!-- <pre>
   {{ item$ | async | json }}
-</pre>
+</pre> -->
