--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,11 @@
 </div>
 
 <pre>
-  {{ items$ | async | json }}
+  {{ items$ | json }}
+  <div *ngFor="let item of items$" > 
+      {{ item | json }}
+
+  </div>
 </pre>
 
 <qpac-generated-list></qpac-generated-list>
