--- a/src/app/dashboard/filters/filter-destination/filter-destination.component.html
+++ b/src/app/dashboard/filters/filter-destination/filter-destination.component.html
@@ -8,7 +8,7 @@
   <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
     <mat-option *ngIf="isLoading" class="is-loading"><mat-spinner diameter="50"></mat-spinner></mat-option>
     <ng-container *ngIf="!isLoading">
-      <mat-option *ngFor="let city of filteredCities" [value]="city" (click)="cityChange()">
+      <mat-option *ngFor="let city of suggestedCities" [value]="city" (onSelectionChange)="cityChange(city)">
         <span>{{ city.name }}</span>
         <small> | {{city.country}}</small>
       </mat-option>
