list local storage

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
       <button mat-button matStepperPrevious>{{'dashboard.controls.back' | translate}}</button>
       <button mat-button (click)="stepper.reset()">{{'dashboard.controls.reset' | translate }}</button>
       <button mat-button color="primary"
-      (click)="generate(this.filterObj)">{{'dashboard.controls.generate' | translate }}</button>
+      (click)="generate(filterObj)">{{'dashboard.controls.generate' | translate }}</button>
     </div>
   </mat-step>
 
