--- a/src/app/generated-list/generated-list.component.html
+++ b/src/app/generated-list/generated-list.component.html
@@ -30,7 +30,8 @@
               (removeById)="removeById($event)"
               (itemChanged)="handleItemChanged($event)"
               [isChecked]="isCheckedAll"
-              [item]="item"></qpac-pack-item>
+              [item]="item">
+      </qpac-pack-item>
     </li>
   </ul>
   <div *ngIf="isOpenAddedField" class="add-item">
