--- a/src/app/generated-list/generated-list.component.html
+++ b/src/app/generated-list/generated-list.component.html
@@ -26,11 +26,15 @@
   </div>
   <h2>General List</h2>
   <div class="pack-items">
-    <ul *ngFor="let item of listItems| async">
-        <li *ngFor="let it of item" >
-          {{ it | json }}
+    <ul *ngFor="let items of listItems| async">
+      <li *ngFor="let item of items">
+          <qpac-pack-item
+                  (removeById)="removeById($event)"
+                  [isChecked]="isCheckedAll"
+                  [item]="item" >
+          </qpac-pack-item>
         </li>
-        </ul>
+    </ul>
   </div>
   <div *ngIf="isOpenAddedField" class="add-item">
     <input #newItem  type="text">
