--- a/src/app/generated-list/generated-list.component.scss
+++ b/src/app/generated-list/generated-list.component.scss
@@ -7,7 +7,10 @@
 .pack-items {
   margin: 0;
   padding: 20px;
-  list-style: none;
+  li {
+    list-style: none;
+  }
+
   li:not(:last-child) {
     margin-bottom: 15px;
   }
