--- a/src/app/core/components/language-switcher/language-switcher.component.scss
+++ b/src/app/core/components/language-switcher/language-switcher.component.scss
@@ -1,7 +1,7 @@
 mat-form-field {
-    width: 60px;
-    display: block;
-    margin-left: 15px;
+    width: 50%;
+    height: 15%;
+    margin-left: 1rem;
 }
 
 a {
