add style for filters

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,8 @@
 <qpac-header></qpac-header>
 
-<mat-vertical-stepper [linear]="true" #stepper>
-  <mat-step>
+<mat-vertical-stepper
+        [linear]="true" #stepper>
+  <mat-step >
     <ng-template matStepLabel><h3>{{ 'filters.destination.header.text' | translate}}</h3></ng-template>
     <qpac-filter-destination (changedCity)="handleFilter($event)"></qpac-filter-destination>
     <div>
@@ -43,9 +44,12 @@
     <div>
       <button mat-button matStepperPrevious>{{'dashboard.controls.back' | translate}}</button>
       <button mat-button (click)="stepper.reset()">{{'dashboard.controls.reset' | translate }}</button>
-      <button mat-button color="primary"
-      (click)="generate(this.filterObj)">{{'dashboard.controls.generate' | translate }}</button>
-    </div>
+      <div class="generate-wrap">
+        <button class="btn btn-yellow"
+                (click)="generate(this.filterObj)">{{'dashboard.controls.generate' | translate }}</button>
+      </div>
+      </div>
+
   </mat-step>
 
 </mat-vertical-stepper>
