--- a/src/app/dashboard/filters/filter-destination/filter-destination.component.html
+++ b/src/app/dashboard/filters/filter-destination/filter-destination.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="dest-container">
+<mat-form-field class="dest-container" color="accent">
   <input
     type="text"
     placeholder="{{ 'filters.destination.placeholder.text' | translate }}"
