--- a/src/app/dashboard/filters/filter-activities/filter-activities.component.scss
+++ b/src/app/dashboard/filters/filter-activities/filter-activities.component.scss
@@ -1,7 +1,7 @@
 .checkbox-wrapper {
+    padding: 25px 0;
     .mat-checkbox{
         margin: 10px;
-    
         label {
             flex-direction: column;
         }
