--- a/src/app/dashboard/filters/filter-duration/filter-duration.component.html
+++ b/src/app/dashboard/filters/filter-duration/filter-duration.component.html
@@ -1,5 +1,5 @@
 <!-- <h3> {{ 'filters.duration.header.text' | translate}}</h3> -->
-<mat-form-field>
+<mat-form-field color="accent">
   <input 
     [min]="minDate()" 
     [(ngModel)]='from' 
@@ -13,7 +13,7 @@
 </mat-form-field>
 
 
-<mat-form-field>
+<mat-form-field color="accent">
   <input 
     [min]="from" 
     [disabled]='!from' 
